timeline textos de izq alineados a la derecha

--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -247,6 +247,7 @@ a:hover {
 
 .container-timeline.left-timeline {
     left: 0;
+    text-align: right;
 }
 
 .container-timeline.right-timeline {
