--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -427,25 +427,87 @@ a:hover {
 
 /*******************************************************************/
 
+/************************** MIS OBJETIVOS **************************/
+
+#my-targets {
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: auto;
+}
+
+#my-targets .list-my-targets {
+    background: #ffffff;
+    color: #454e56;
+    padding: 1rem;
+    border-radius: 12px;
+    box-shadow: 4px 4px 1px rgb(255 0 235), 8px 8px 0px rgb(255 255 55);
+    transition: all 0.3s;
+}
+
+#my-targets .list-my-targets:hover {
+    box-shadow: 4px -4px 1px rgb(255 0 235), 8px -8px 0px rgb(255 255 55);
+}
 
 
+@media (max-width: 600px) {
+    #my-targets {
+        width: 100%;
+    }
 
+    #my-targets .list-my-targets {
+        border-radius: 0;
+    }
+}
 
+#my-targets li {
+    font-size: 1.5em;
+    line-height: 1.5em;
+    list-style: none;
+    position: relative;
+    padding: .5rem .5rem .5rem 2.5rem;
+}
 
+#my-targets li:not(:last-child) {
+    border-bottom: 1px solid #454e56;
+}
 
+#my-targets .target-checked {
+    text-decoration: line-through .3px solid;
+}
 
+#my-targets .target-checked {
+    color: #a7a7a7;
+}
 
+#my-targets .target-checked::after {
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: 0.5rem;
+    width: 10px;
+    height: 20px;
+    border-width: 0 3px 3px 0;
+    border-style: solid;
+    transform-origin: bottom left;
+    transform: rotate(45deg);
+    box-sizing: border-box;
+}
 
+#my-targets li::before {
+    content: '';
+    position: absolute;
+    top: 20px;
+    left: 0.5rem;
+    width: 15px;
+    height: 15px;
+    border: 2px solid;
+    transform-origin: bottom left;
+    box-sizing: border-box;
+}
 
+/*******************************************************************/
 
-
-
-
-
-
-
-
-
+/******************************* CV *******************************/
 
 #container-cv {
     color: #454e56;
@@ -1111,3 +1173,5 @@ a:hover {
 }
 
 /******************************************************************/
+
+/*******************************************************************/
